# VoiceUI

./: .gitignore  README.md  fetch-assets.sh  index.html  main.py  pyproject.toml
